VSE - Movie clip undistorted - proxy not working #54117

Closed
opened 2018-02-21 18:24:02 +01:00 by Alessandro Riva · 10 comments

System Information
Ubuntu 17.10 Nvidia GeForce 820M

Blender Version
Broken: 2-79

Short description of error
No display of an added strip clip to VSE with undistorted clip flag and proxy created from motion tracking layout.

Exact steps for others to reproduce the error
Open blender, create a new project
Switch into motion tracking layout
Import a movie clip (es: clip001.avi)
Set lens distortion In lens properties
Set render undistorted in display properties
Flag proxy/timecode and set 25% (build original) and 25% (build undistorted)
Press build proxy / timecode
Switch to Video editing layout
Add "clip" (clip001.avi) to sequencer (from motion tracking)
Check Filter/Undistort clip (preview works)
In Scene/preview render /view settings select "Proxy size 25%" (preview works)

  • No display in preview !!!

Uncheck Filter/Undistort clip (preview works with proxy distorted)

**System Information** Ubuntu 17.10 Nvidia GeForce 820M **Blender Version** Broken: 2-79 **Short description of error** No display of an added strip clip to VSE with undistorted clip flag and proxy created from motion tracking layout. **Exact steps for others to reproduce the error** Open blender, create a new project Switch into motion tracking layout Import a movie clip (es: clip001.avi) Set lens distortion In lens properties Set render undistorted in display properties Flag proxy/timecode and set 25% (build original) and 25% (build undistorted) Press build proxy / timecode Switch to Video editing layout Add "clip" (clip001.avi) to sequencer (from motion tracking) Check Filter/Undistort clip (preview works) In Scene/preview render /view settings select "Proxy size 25%" (preview works) - > No display in preview !!! Uncheck Filter/Undistort clip (preview works with proxy distorted)

Added subscriber: @AlessandroRiva

Added subscriber: @AlessandroRiva

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

I could not reproduce;
was unclear in the instructions after:

Switch to Video editing layout

Perhaps a short video showing the reported issue?
My attempt:
0001-1000.mkv

I could not reproduce; was unclear in the instructions after: > Switch to Video editing layout Perhaps a short video showing the reported issue? My attempt: [0001-1000.mkv](https://archive.blender.org/developer/F2367129/0001-1000.mkv)

Here it is detailed instructions

walkthrough.pdf
Thanks

Here it is detailed instructions [walkthrough.pdf](https://archive.blender.org/developer/F2370049/walkthrough.pdf) Thanks

Thank You, can confirm;
This is probably because the undistorted clip's proxy is rendered as an image sequence whereas the VSE uses proxies that are Motion JPEG. I guess it's not setup to deal with image sequence proxies?

Thank You, can confirm; This is probably because the undistorted clip's proxy is rendered as an image sequence whereas the VSE uses proxies that are Motion JPEG. I guess it's not setup to deal with image sequence proxies?

Maybe I shouldn't triage tasks without them being assigned (and therefore forgotten about or over looked).
Sorry...

Maybe I shouldn't triage tasks without them being assigned (and therefore forgotten about or over looked). Sorry...

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

In #54117#491421, @ChristopherAnderssarian wrote:
Maybe I shouldn't triage tasks without them being assigned (and therefore forgotten about or over looked).

Aaaand that's exactly what happened....

@lichtwerk Could you have a peek?

> In #54117#491421, @ChristopherAnderssarian wrote: > Maybe I shouldn't triage tasks without them being assigned (and therefore forgotten about or over looked). Aaaand that's exactly what happened.... @lichtwerk Could you have a peek?
Richard Antalik self-assigned this 2019-01-17 02:30:52 +01:00

This issue was referenced by 9c99292a16

This issue was referenced by 9c99292a16df35a5d244606cc49e06949a4ef535

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54117
No description provided.